# TraceIt

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
TraceIt/: CMakeLists.txt
TraceIt/scripts/: traceit_cli_loop.bat
TraceIt/src/: app.cpp  camera.cpp  camera.h  image.cpp  image.h  input.h  log.h  renderer.cpp  renderer.h  scene.h  ui.cpp  ui.h  wormhole_app_cli.cpp
